fix multiple holiday bug/spacing on homepage slideshow

--- a/static/css/static.css
+++ b/static/css/static.css
@@ -44,13 +44,18 @@ button {
     font-size: 22px;
     position: absolute;
     padding-bottom: 100px;
-    padding-top: 800px
+    padding-top: 800px;
 }
 
 .homepage h1 {
     display: grid;
     place-items: center;
 }
+
+.home-slideshow {
+    margin-left: 35px;
+}
+
 
 #share-popup-window-text {
     display: grid;
@@ -120,7 +125,7 @@ button {
 }
 
 #slideshow {
-    max-width: 1200px;
+    width: 1400px;
     place-items: center;
 }
 
@@ -179,7 +184,7 @@ button {
     font-size: 30px;
 }
 
-#test-div {
+#holiday-buttons-div {
     text-align: center;
 }
 
